# ModernCpp

./: README.md
CMakeDemos/: .editorconfig  CMakeLists.txt  README.md
CMakeDemos/Samples/: CMakeLists.txt
CMakeDemos/Samples/Demo/: CMakeLists.txt  main.cpp
CMakeDemos/Samples/QDemo/: CMakeLists.txt  QDemo.cpp  QDemo.h  QDemo.ui  main.cpp
CMakeDemos/Samples/QWebSocket/: CMakeLists.txt  DoubleValidator.cpp  DoubleValidator.h  QWebSocket.cpp  QWebSocket.h  QWebSocket.qrc  QWebSocket.ui  main.cpp
CMakeDemos/cmake/: PackageConfig.cmake.in  deploy_dep_binaries.cmake  deploy_dep_binaries.ps1  deploy_msvc_runtime.cmake  version.rc.in  write_version_rc.cmake
CMakeDemos/libs/core/: CMakeLists.txt  FileUtils.cpp
CMakeDemos/libs/core/include/: FileUtils.h
CMakeDemos/libs/utils/: CMakeLists.txt  DialogBase.cpp
CMakeDemos/libs/utils/include/: DialogBase.h
Modern-C++/: 1.转向Modern C++.md  2.智能指针.md  3.右值引用.md  4.右值移动和转发.md  5.Lambda 表达式.md  Agreement C++.md  README.md
Modern-CMake/: 1.Modern CMake简介.md  2.基本介绍1.md  3.基本介绍2.md  README.md
